--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 	
 <center><h1>About Me</h1></center>
 	
-<center>My name is Tristan Dantel and I'm a 14 year old person and I love cats</center>
+<center>My name is [redacted] and I'm a 14 year old person and I love cats</center>
 
 </body>
 </html>
