--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 </td>
 	
-<!--Top_Banner--><td valign="top" height="5"><marquee>WEBPAGE CURRENTLY IN EARLY DEVELOPMENT!!! --- SITE URL IS SUBJECT TO CHANGE!!!</marquee></td>
+<!--Top_Banner--><td valign="top" height="5"><marquee>WEBPAGE CURRENTLY IN EARLY AND REALLY UNFINISHED DEVELOPMENT!!! --- SITE URL IS SUBJECT TO CHANGE!!!</marquee></td>
 
 <!--Main_Page--><tr><td valign="top">
 	
