--- a/blogselect.html
+++ b/blogselect.html
@@ -10,7 +10,7 @@
 	
 <center><a href="blogs\blog1.html"><center><h3>4/13/2024: SPIDER-MAN WILL BE REAL IN TWO DAYS</h3></center></a></center>
 
-<center><a href="blogs\blog1.html"><center><h3>4/14/2024: SITE HAS OFFICIALLY LAUNCHED (TEMPORARILY)</h3></center></a></center>
+<center><a href="blogs\blog1.html"><center><h3>4/14/2024: SITE HAS OFFICIALLY LAUNCHED ...TEMPORARILY</h3></center></a></center>
 
 </body>
 </html>
