--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 <!--HTML_Page_Properties--><body background="" bgcolor="#000000" text="#ffffff" link="#FF0000" vlink="#FF0000">
 	
-<!--Favicon--><link rel="icon" type="image/png" href="favicon.png">
+<!--Favicon--><link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	
 <!--Ruffle--><script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 	
