--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 </td>
 	
-<!--Top_Banner--><td valign="top" height="5"><marquee>WEBPAGE CURRENTLY IN EARLY AND REALLY UNFINISHED DEVELOPMENT!!! --- SITE URL IS SUBJECT TO CHANGE!!!</marquee></td>
+<!--Top_Banner--><td valign="top" height="5"><marquee>WEBPAGE CURRENTLY IN EARLY DEVELOPMENT!!!</marquee></td>
 
 <!--Main_Page--><tr><td valign="top">
 	
@@ -45,6 +45,7 @@
 	
 <h3 style="position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
 	
-Bottom text for stuff or something
+<div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=166189&s=5' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free Website Hit Counter</a></small></div>
+
 	
 </html>
