--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 	
 <h3 style="position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">
 	
-<div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=166190&s=76' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free Website Hit Counter</a></small></div>
+Bottom text for stuff or something
 	
 </html>
