--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#FF0000" vlink="#FF0000">
 	
-<center><h1>About Me</h1></center>
+<center><h1>About Me (UNFINISHED)</h1></center>
 	
 <center>My name is sw0rve and I'm a 14 year old person and I love cats and my <a href="gf.html">girlfriend</a></href></center>
 
