--- a/index.html
+++ b/index.html
@@ -3,44 +3,14 @@
 <head>
 <title>sw0rve's Webpage</title>
 </head>
-	
-<!--THIS_WEBPAGE_IS_INTENDED_FOR_1366x768_AND_HIGHER-->
-	
-<!--HTML_Page_Properties--><body background="" bgcolor="#000000" text="#ffffff" link="#FF0000" vlink="#FF0000">
-	
-<!--Favicon--><link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-	
-<!--Ruffle--><script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-	
-<script> window.RufflePlayer.config = {autoplay: "on"};</script>
-	
-<!--Full_Table_Border--><table border="0" width="760" height="195" cellspacing="15" cellpadding="3" align="center">
-	
-<td valign="center"><center><h1>sw0rve's Webpage</h1></center></td>
-	
-<!--Full_Table_Border--><table border="1" bordercolor="black" bgcolor="#222222" width="960" height="640" cellspacing="15" cellpadding="3" align="center">
 
-<!--Side_Bar--><tr><td valign="top" rowspan="3" width="150">
+<body bgcolor="#000000" text="#ffffff" link="#FF0000" vlink="#FF0000">
 	
-<a href="aboutme.html" target="_parent"><center><h3>Who is this guy?</h3></center></a>
-<center><header style="margin-top: -20px;"><h5>Learn a bit about myself</h5></center>
+<center><h1>WEBSITE UNDER CONSTRUCTION</h1></center>
+	
+<center><img src="https://i.gifer.com/73y8.gif" width="644" height="445"</center>
 
-	
-<a href="placeholder.html"><center><h3>Guestbook</h3></center></a>
-<center><header style="margin-top: -20px;"><h5>Feel free to sign it</h5></center>
-	
-<a href="blogselect.html" target="_parent"><center><h3>Blog Posts</h3></center></a>
-<center><header style="margin-top: -20px;"><h5>Hear what's on my mind</h5></center>
-	
-<a href="killmariogame.html"><center><h3>KILL MARIO</h3></center></a>
-<center><header style="margin-top: -20px;"><h5>Pretty self-explanatory</h5></center>
-	
-</td>
-	
-<!--Top_Banner--><td valign="top" height="5"><marquee>WEBPAGE CURRENTLY IN EARLY DEVELOPMENT!!! --- URL IS SUBJECT TO CHANGE!!!</marquee></td>
+<h3>more stuff coming soon!!</h3>
 
-<!--Main_Page--><tr><td valign="top">
-	
-<img src="https://media.tenor.com/r0R0N3dI3kIAAAAM/dancing-cat-dance.gif"></td>
-	
+</body>
 </html>
