--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 <center><img src="https://i.gifer.com/73y8.gif" width="644" height="445"</center>
 
-<h3>more stuff coming soon!!</h3>
+<h3>check again later</h3>
 
 </body>
 </html>
