--- a/killmario/marioplay.html
+++ b/killmario/marioplay.html
@@ -6,7 +6,7 @@
 	
 <body bgcolor="#000000" text="#ffffff" link="#FF0000" vlink="#FF0000">
 	
-<center><h1>KILL MARIO</h1></center>
+<center><h1><font size=8>KILL MARIO</font></h1></center>
 	
 <center><img src="bigmario.png"</center>
 	
