--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
 
 <!--Main_Page--><tr><td valign="top">
 	
-<a href="..\sw0rve_webpage\webpagetesting\flash_js_overhall\index.html" target=_parent><img src="https://media.tenor.com/r0R0N3dI3kIAAAAM/dancing-cat-dance.gif"></a></href></td>
+<a href="..\webpagetesting\flash_js_overhall\index.html" target=_parent><img src="https://media.tenor.com/r0R0N3dI3kIAAAAM/dancing-cat-dance.gif"></a></href></td>
 	
 </html>
