--- a/blogselect.html
+++ b/blogselect.html
@@ -10,5 +10,7 @@
 	
 <center><a href="blogs\blog1.html"><center><h3>4/13/2024: SPIDER-MAN WILL BE REAL IN TWO DAYS</h3></center></a></center>
 
+<center><a href="blogs\blog2.html"><center><h3>5/17/2024: BRAND NEW SHIT COMING SOON</h3></center></a></center>
+
 </body>
 </html>
