--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -12,7 +12,7 @@
 <td valign="center"><center><font size="4"></fo>So in case if you guys haven't heard, all eight of the highly praised Spider-Man live action movies are re-releasing in theater starting on the 15th as seen <a href="https://youtu.be/-yG1pXQWzz4" target=_blank>here.</a></href> It's so "amazing" that this is happening because these movies are just great classics, especially the Sam Raimi ones, and that we all get to see them on the BIG screen. My friends and I can practically rehearse almost any scene from the Sam Raimi films, that's how much we love these great films. Hell, when I first heard the news of this happening, I immediately tell my friends about it and how we should all see it together, and they were instantly in on it. Our original plan was that we were going to see the first three Sam Raimi films, and then one of my friends says, "What if we saw ALL eight movies." And that was so stupid enough that we actually considered it. Then there was a whole thing about who's paying for who but i'm not gonna get into that, this blog is already long enough. But, we got our tickets, so we chillin. Anyways that's the first blog post, hope it didn't suck.</center></td>
 	
 <table border="0" width="960" align="center">
-<td valign="center"><center><h2>Video of the week:</h2>
+<td valign="center"><center><h2>Video of the month:</h2>
 	
 <center><iframe width="426" height="240" src="https://www.youtube.com/embed/jM7Eou4bV-Q" title="Spider-Man Movie (2002) - Peter vs. Flash Scene (1/10) | Movieclips" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center></td>
 
